--- a/control_produccion/templates/control_produccion/order_detail.html
+++ b/control_produccion/templates/control_produccion/order_detail.html
@@ -11,8 +11,7 @@
 
     <!-- Nav tabs -->
     <ul class="nav nav-pills pull-right" role="tablist">
-        <li role="presentation" class="active"><a href="#orderProcesses" aria-controls="orderProcesses" role="tab" data-toggle="tab">Procesos</a></li>
-        <li role="presentation"><a href="#orderAnalytics" aria-controls="orderAnalytics" role="tab" data-toggle="tab">Analytics</a></li>
+        <li role="presentation" class="active"><a href="#orderAnalytics" aria-controls="orderAnalytics" role="tab" data-toggle="tab">Analytics</a></li>
     </ul>
     <h1>Orden #{{ order.order_op_number }} <small> {{ order.order_description }}</small></h1>
 {% endblock %}
@@ -49,7 +48,7 @@
     <!-- Tab contents -->
     <div class="tab-content">
         <!-- Analytics -->
-        <div role="tabpanel" class="row tab-pane fade" id="orderAnalytics">
+        <div role="tabpanel" class="row tab-pane fade in active" id="orderAnalytics">
             <div class="col-md-6">
                 <div class="card">
                     <div class="header">
@@ -114,95 +113,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Processes -->
-        <div role="tabpanel" class="row tab-pane fade in active" id="orderProcesses">
-            {% for order_process in order_process_list %}
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="header">
-                        {{ order_process.process }}
-                        <p class="category">
-                            {% if not order_process.get_is_started and not order_process.get_is_finished %}
-                            Proceso no comenzado aún
-                            <hr>
-                            <!-- Start process button -->
-                            <a tabindex="0" id="popover-start-process-{{ order_process.process.id }}" class="btn btn-success" role="button" data-placement="top" title="Entra tus credenciales">Comenzar proceso</a>
-                            <div id="popover-start-process-content-{{ order_process.process.id }}" class="hide">
-                                <form method="POST" action="{% url 'control_produccion:order_start_process' order.id order_process.process.id %}">{% csrf_token %}
-                                    <div class="form-group popover-input">
-                                        <label for="username">Usuario</label>
-                                        <input type="text" name="username" placeholder="Usuario" class="form-control">
-                                    </div>
-                                    <div class="form-group popover-input">
-                                        <label for="password">Contraseña</label>
-                                        <input type="password" name="password" placeholder="Contraseña" class="form-control">
-                                    </div>
-                                    <button class="btn btn-primary btn-fill" type="submit">Listo</button>
-                                </form>
-                            </div>
-                            {% elif order_process.get_is_paused %}
-                            Proceso pausado
-                            <hr>
-                            <!-- Resume process button -->
-                            <a tabindex="0" id="popover-resume-process-{{ order_process.process.id }}" class="btn btn-info" role="button" data-placement="top" title="Entra tus credenciales">Resumir proceso</a>
-                            <div id="popover-resume-process-content-{{ order_process.process.id }}" class="hide">
-                                <form method="POST" action="{% url 'control_produccion:order_resume_process' order.id order_process.process.id %}">{% csrf_token %}
-                                    <div class="form-group popover-input">
-                                        <label for="username">Usuario</label>
-                                        <input type="text" name="username" placeholder="Usuario" class="form-control">
-                                    </div>
-                                    <div class="form-group popover-input">
-                                        <label for="password">Contraseña</label>
-                                        <input type="password" name="password" placeholder="Contraseña" class="form-control">
-                                    </div>
-                                    <button class="btn btn-primary btn-fill" type="submit">Listo</button>
-                                </form>
-                            </div>
-                            {% elif order_process.get_is_started and not order_process.get_is_finished %}
-                            Proceso comenzado {{ order_process.get_datetime_started|naturaltime|default_if_none:"---" }} por {{ order_process.get_user_short_name_who_started_process }}
-                            <hr>
-                            <!-- Pause process button -->
-                            <a tabindex="0" id="popover-pause-process-{{ order_process.process.id }}" class="btn btn-info" role="button" data-placement="top" title="Entra tus credenciales">Pausar proceso</a>
-                            <div id="popover-pause-process-content-{{ order_process.process.id }}" class="hide">
-                                <form method="POST" action="{% url 'control_produccion:order_pause_process' order.id order_process.process.id %}">{% csrf_token %}
-                                    <div class="form-group popover-input">
-                                        <label for="username">Usuario</label>
-                                        <input type="text" name="username" placeholder="Usuario" class="form-control">
-                                    </div>
-                                    <div class="form-group popover-input">
-                                        <label for="password">Contraseña</label>
-                                        <input type="password" name="password" placeholder="Contraseña" class="form-control">
-                                    </div>
-                                    <button class="btn btn-primary btn-fill" type="submit">Listo</button>
-                                </form>
-                            </div>
-                            <!-- Finish process button -->
-                            <a tabindex="1" id="popover-finish-process-{{ order_process.process.id }}" class="btn btn-danger" role="button" data-placement="top" title="Entra tus credenciales">Terminar proceso</a>
-                            <div id="popover-finish-process-content-{{ order_process.process.id }}" class="hide">
-                                <form method="POST" action="{% url 'control_produccion:order_finish_process' order.id order_process.process.id %}">{% csrf_token %}
-                                    <div class="form-group popover-input">
-                                        <label for="username">Usuario</label>
-                                        <input type="text" name="username" placeholder="Usuario" class="form-control">
-                                    </div>
-                                    <div class="form-group popover-input">
-                                        <label for="password">Contraseña</label>
-                                        <input type="password" name="password" placeholder="Contraseña" class="form-control">
-                                    </div>
-                                    <button class="btn btn-primary btn-fill" type="submit">Listo</button>
-                                </form>
-                            </div>
-                            {% else %}
-                            Proceso terminado en {{ order_process.get_duration|humanize_seconds }} por {{ order_process.get_user_short_name_who_finished_process }}
-                            <hr>
-                            <button class="btn btn-default disabled">Proceso terminado</button>
-                            {% endif %}
-                        </p>
-                    </div>
-                    <div class="content"></div>
-                </div>
-            </div>
-            {% endfor %}
         </div>
     </div>
 </div>
