--- a/control_produccion/templates/control_produccion/orders.html
+++ b/control_produccion/templates/control_produccion/orders.html
@@ -7,24 +7,7 @@
     {% endfor %}
 {% endif %}
 
-<h1>
-    Órdenes
-    <!-- Start process button -->
-    <a tabindex="0" id="popover-pause-all-processes" class="btn btn-info" role="button" data-placement="bottom" title="Entra tus credenciales">Pausar todos los procesos activos</a>
-    <div id="popover-pause-all-processes-content" class="hide">
-        <form method="POST" action="{% url 'control_produccion:pause_all_processes' %}">{% csrf_token %}
-            <div class="form-group">
-                <label for="username">Usuario</label>
-                <input type="text" name="username" placeholder="Usuario" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="password">Contraseña</label>
-                <input type="password" name="password" placeholder="Contraseña" class="form-control">
-            </div>
-            <button class="btn btn-info" type="submit">Listo</button>
-        </form>
-    </div>
-</h1>
+<h1>Órdenes</h1>
 {% endblock %}
 
 {% block content %}
