--- a/templates/base_site.html
+++ b/templates/base_site.html
@@ -33,12 +33,6 @@
                     </div>
                     <ul class="nav">
                         <li>
-                            <a href="{% url 'control_produccion:orders' %}" class="simple-text">
-                                <i class="pe-7s-note2"></i>
-                                <p>Listado de Órdenes</p>
-                            </a>
-                        </li>
-                        <li>
                             <a href="{% url 'control_produccion:active_orders' %}" class="simple-text">
                                 <i class="pe-7s-display2"></i>
                                 <p>Órdenes Activas</p>
@@ -48,6 +42,31 @@
                             <a href="{% url 'control_produccion:analytics' %}" class="simple-text">
                                 <i class="pe-7s-graph2"></i>
                                 <p>Analytics</p>
+                            </a>
+                        </li>
+                        <hr style="width: 85%; margin: auto;">
+                        <li>
+                            <a href="{% url 'control_produccion:clients' %}" class="simple-text">
+                                <i class="pe-7s-users"></i>
+                                <p>Clientes</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{% url 'control_produccion:machines' %}" class="simple-text">
+                                <i class="pe-7s-edit"></i>
+                                <p>Máquinas</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{% url 'control_produccion:orders' %}" class="simple-text">
+                                <i class="pe-7s-note2"></i>
+                                <p>Órdenes</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{% url 'control_produccion:orders' %}" class="simple-text">
+                                <i class="pe-7s-id"></i>
+                                <p>Trabajadores</p>
                             </a>
                         </li>
                     </ul>
