--- a/templates/base_site.html
+++ b/templates/base_site.html
@@ -6,19 +6,18 @@
         <link rel="icon" type="image/png" href="{% static 'img/favicon.ico' %}">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-        <title>Orders Project</title>
+        <title>Litográfica | Control de Producción</title>
 
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
         <meta name="viewport" content="width=device-width" />
 
-        <!-- Latest compiled and minified Bootstrap CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <!-- Minified Bootstrap CSS -->
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/light-bootstrap-dashboard.css' %}">
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
         <!-- Fonts and icons -->
-        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-        <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/pe-icon-7-stroke.css' %}">
 
         {% block cssfiles %}
@@ -29,65 +28,25 @@
             <div class="sidebar" data-color="azure" data-image="{% static 'img/sidebar-4.jpg' %}">
                 <div class="sidebar-wrapper">
                     <div class="logo">
-                        <a href="{% url 'index' %}" class="simple-text">Orders Project</a>
+                        <a href="{% url 'index' %}" class="simple-text">Control Producción</a>
                     </div>
                     <ul class="nav">
-                        <li>
-                            <a href="{% url 'control_produccion:active_orders' %}" class="simple-text">
-                                <i class="pe-7s-display2"></i>
-                                <p>Órdenes Activas</p>
-                            </a>
-                        </li>
                         <li>
                             <a href="{% url 'control_produccion:analytics' %}" class="simple-text">
                                 <i class="pe-7s-graph2"></i>
                                 <p>Analytics</p>
                             </a>
                         </li>
-                        <hr style="width: 85%; margin: auto;">
                         <li>
-                            <a href="{% url 'control_produccion:clients' %}" class="simple-text">
-                                <i class="pe-7s-users"></i>
-                                <p>Clientes</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{% url 'control_produccion:machines' %}" class="simple-text">
-                                <i class="pe-7s-edit"></i>
-                                <p>Máquinas</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{% url 'control_produccion:orders' %}" class="simple-text">
-                                <i class="pe-7s-note2"></i>
-                                <p>Órdenes</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{% url 'control_produccion:orders' %}" class="simple-text">
-                                <i class="pe-7s-id"></i>
-                                <p>Trabajadores</p>
+                            <a href="{% url 'control_produccion:active_orders' %}" class="simple-text">
+                                <i class="pe-7s-display2"></i>
+                                <p>Órdenes Activas</p>
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="main-panel">
-                <nav class="navbar navbar-default navbar-fixed">
-                    <div class="container-fluid">
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse">
-                                <span class="sr-only">Toggle navigation</span>
-                            </button>
-                        </div>
-                        <div class="collapse navbar-collapse">
-                            <ul class="nav navbar-nav navbar-left">
-                                <li><a href="{% url 'control_produccion:index' %}">Orders Project</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-
                 <div class="content">
                     <div class="container-fluid">
                         {% block header %}
@@ -111,10 +70,10 @@
             </div>
         </div>
 
-        <!-- jQuery lastest minified version -->
-        <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-        <!-- Latest compiled and minified Bootstrap JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+        <!-- jQuery minified version -->
+        <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
+        <!-- Minified Bootstrap JavaScript -->
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/light-bootstrap-dashboard.js' %}"></script>
         {% block jsfiles %}
         {% endblock %}
